# woaa-trading

./: README.md  deploy.sh  docker-compose.yml
woaa-backend/: .env  .env.test  Dockerfile  alembic.ini  pyproject.toml  start.py
woaa-backend/alembic/: env.py
woaa-backend/alembic/versions/: 2aa85d6fa51d_rename_margin_rate_to_margin_limit_and_.py  309c69dc9c18_add_last_updated_to_user_settings.py  315fe8c741e7_add_paused_to_user_settings.py  797d599372e1_add_borrowed_margin_to_user_settings.py  b3cd3462a4b1_add_initial_sim_balance_to_user_settings.py  b7e8248a4bb8_init_schema.py
woaa-backend/app/: auth.py  data.py  data_sdk.py  database.py  main.py  test_fetch_data.py
woaa-backend/app/api/: admin.py  auth.py  data.py  data_ws.py  log.py  market_clock.py  position.py  sim_ws.py  simulation_ws.py  trade.py  transaction.py  user.py  user_setting.py
woaa-backend/app/models/: log.py  position.py  transaction.py  user.py  user_setting.py
woaa-backend/app/schemas/: data.py  log.py  position.py  transaction.py  user.py  user_setting.py
woaa-backend/app/services/: alpaca.py  data.py  fetch_bars_from_alpaca.py  log.py  position.py  sim_clock.py  sim_ws.py  trade.py  transaction.py  user.py  user_setting.py
woaa-backend/app/tasks/: simulation.py
woaa-backend/app/tests/: conftest.py  fetch_data.py  test_example.py  test_fetch_data.py  test_main.py
woaa-backend/app/tests/test_api/: test_auth_api.py  test_log_api.py  test_position_api.py  test_transaction_api.py  test_user.py  test_user_api.py  test_user_settings_api.py
woaa-backend/app/tests/test_models/: test_log_model.py  test_position_model.py  test_transaction_model.py  test_user_model.py  test_user_setting_model.py
woaa-backend/app/utils/: security.py
woaa-backend/app/websocket/: historical_bars.py  real_time_data_ws.py  real_time_trades.py  router.py
(+71 files in other folders)
